istio-cd-artifacts-master/notes_istio/dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grpc-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts: 
    - '*'
    port:
      number: 80
      name: grpc-wildcard
      protocol: GRPC
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ca-tls
      mode: SIMPLE
