istio-cd-artifacts-master/notes_istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  generation: 1
  namespace: istio-system
spec:
  gateways:
  - grpc-gateway
  hosts:
  - grpc-istio.eng.cybereason.net
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
      weight: 100
